user-skel/k8s/namespaces.yml
---
apiVersion: v1
kind: Namespace
metadata:
   name: ace
---
apiVersion: v1
kind: Namespace
metadata:
   name: staging
---
apiVersion: v1
kind: Namespace
metadata:
   name: production
