user-skel/k8s/kubernetes-dashboard.ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  labels:
    app: kubernetes-dashboard
  annotations:
    kubernetes.io/ingress.class: public   
    cert-manager.io/issuer: "letsencrypt-staging"
    ingress.kubernetes.io/ssl-passthrough: "true"
    nginx.org/ssl-backends: "kubernetes-dashboard"
    kubernetes.io/ingress.allow-http: "false"
    nginx.ingress.kubernetes.io/backend-protocol: "HTTPS"
  name: dashboard-ingress
  namespace: kube-system
spec:
  tls:
  - hosts:
    - dashboard.kubernetes.192.168.50.10.xip.io
    secretName: k8s-dashboard-tls
  rules:
  - host: dashboard.kubernetes.192.168.50.10.xip.io
    http:
      paths:
      - backend:
          serviceName: kubernetes-dashboard
          servicePort: 443
        path: /
        pathType: ImplementationSpecific
